refined layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,7 @@
         width: 50%;
     }
     h4 {
-        margin-top: -30%;
+        margin-top: -25%;
     }
     i {
         font-size: 30px;
